# efup

./: .gitignore  .gitmodules  Makefile.in  README  autogen.sh  configure.ac  download.lua  efup.fstab  efup.lua  efup.mk  freetype.mk  init.lua  main.mk  nss.mk  settings.in
configs/: arm-generic-linaro-4.9
configs/arm-armx6q-linaro-4.9/: create-sd-image.sh  settings.inc
configs/arm-generic-codebench-2015.12/: settings.inc
configs/arm-generic-linaro-4.9/: settings.inc
include/: .gitignore
include/blkid/: blkid.h
include/efup/: clist.h  debug.h  dev.h  efup.h  fstab.h  mtab.h  partmgr.h  scripting.h  source.h  tools.h  ui.h  verifier.h  volume.h
include/libzip/: config.h  zipconf.h
include/nspr/: _pl_bld.h  prcpucfg.h
include/png/: pnglibconf.h
include/uuid/: uuid.h
m4/: curl-compilers.m4  curl-confopts.m4  curl-functions.m4  curl-openssl.m4  curl-override.m4  curl-reentrant.m4  curl-translit.m4  curl.m4  nss.m4  perl.m4
signing/certs/: self.cert  self.privkey
src/: debug.c  dev.c  extract.c  format.c  fstab.c  main.c  mdev.c  mount.c  mtab.c  opkg.c  partmgr.c  run.c  source.c  source_local_folder.c  source_local_zip.c  volume.c
src/scripting/: main.c  opkg.c  ui.c
src/ui/: directfb.c  none.c
src/verifier/: nss.c
